--- a/.github/release-drafter.yml
+++ b/.github/release-drafter.yml
@@ -1,19 +1,22 @@
-name-template: 'v$NEXT_PATCH_VERSION 🌈'
+name-template: 'v$NEXT_PATCH_VERSION'
 tag-template: 'v$NEXT_PATCH_VERSION'
 categories:
-  - title: '🚀 Features'
-    labels:
-      - 'feature'
-      - 'enhancement'
+  - title: '🚀 Added'
+    label: 'added-feature'
+  - title: '🧰 Changed'
+    label: 'changed'
+  - title: "⚠️ Deprecated"
+    label: "deprecated"
+  - title: "⚠️ Removed"
+    label: "removed"
   - title: '🐛 Bug Fixes'
-    labels:
-      - 'fix'
-      - 'bugfix'
-      - 'bug'
-  - title: '🧰 Maintenance'
-    label: 'chore'
+    label: 'bugfix'
+  - title: "⚠️ Security"
+    label: "security"
 change-template: '- $TITLE @$AUTHOR (#$NUMBER)'
+no-changes-template: "- No changes"
 template: |
   ## Changes
 
   $CHANGES
+
