--- a/.github/workflows/auto-label.yml
+++ b/.github/workflows/auto-label.yml
@@ -23,6 +23,7 @@ jobs:
       - uses: actions/github-script@0.8.0
         with:
           github-token: ${{secrets.GITHUB_TOKEN}}
+          script: |
             await github.issues.createComment({
               issue_number: context.issue.number,
               owner: context.repo.owner,
