--- a/.github/workflows/docker-hub.yml
+++ b/.github/workflows/docker-hub.yml
@@ -8,5 +8,5 @@ jobs:
     steps:
     - uses: actions/checkout@master
     - name: Test
-      run: echo "asdf,${{github.ref}},${{github}}"
+      run: echo "asdf,${{github.ref}},${{github.event_name}}${{github.action}}${{github.event_path}}${{github.event.id}}${{github.event.tag_name}}"
 
