--- a/.github/workflows/docker-hub.yml
+++ b/.github/workflows/docker-hub.yml
@@ -7,6 +7,19 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@master
-    - name: Test
-      run: echo "asdf,${{github.ref}},${{github.event_name}}${{github.action}}${{github.event_path}}${{github.event.id}}${{github.event.tag_name}}"
-
+    - name: ref
+      run: echo "${{github.ref}}"
+    - name: event name
+      run: echo "${{github.event_name}}"
+    - name: action
+      run: echo "${{github.action}}"
+    - name: event_path
+      run: echo "${{github.event_path}}"
+    - name: event id
+      run: echo "${{github.event.id}}"
+    - name: tagname
+      run: echo "${{github.event.tag_name}}"
+    - name: event id2
+      run: echo "${{github.event.release.id}}"
+    - name: tagname2
+      run: echo "${{github.event.release.tag_name}}"
